--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cache-manager-fs": "^1.0.8",
     "cache-manager-fs-binary": "^1.0.4",
     "canvas": "^2.6.1",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   },
